# rust-algo

./: Cargo.toml  README.md
.github/workflows/: rust.yml
binary-search/src/: lib.rs
insertion-sort/: Cargo.toml
insertion-sort/src/: lib.rs
selection-sort/: Cargo.toml
selection-sort/src/: lib.rs
sort/heap-sort/: Cargo.toml
sort/heap-sort/src/: lib.rs
sort/insertion-sort/: Cargo.toml
sort/insertion-sort/src/: lib.rs
sort/merge-sort/: Cargo.toml
sort/merge-sort/src/: lib.rs
sort/quick-sort/: Cargo.toml
sort/quick-sort/src/: lib.rs
sort/quicksort/: Cargo.toml
sort/quicksort/src/: lib.rs
sort/selection-sort/: Cargo.toml
sort/selection-sort/src/: lib.rs
