[package]
name = "heap-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.4"
pretty_assertions = { version= "1.0.0", default-features = false, features = ["alloc"] }
